11_minikube/deployments/orbit/inbound-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inbound-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inbound-api
  template:
    metadata:
      labels:
        app: inbound-api
    spec:
      containers:
      - name: inbound-api
        image: inbound-api:latest
        imagePullPolicy: Never 
        volumeMounts: 
        - name: credentials
          mountPath: /meta/credentials
        ports:
        - name: api
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15 
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          failureThreshold: 3
      volumes:
      - name: credentials
        hostPath: 
          path: /mnt/minikube/credentials/inbound-api
          type: Directory
