11_minikube/deployments/orbit/inbound-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inbound-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: inbound-api.minikube
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: inbound-api
                port:
                  name: api
